syntax = "proto3";

package example.calculator;

import "google/api/annotations.proto";

option go_package = "./calculatorpb";

message CalculatorRequest {
  int64 first_number = 1;
  int64 second_number = 2;
}

message CalculatorResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc Add(CalculatorRequest) returns (CalculatorResponse) {
    option (google.api.http) = {
      post: "/v1/add"
      body: "*"
    };
  };

  rpc Sub(CalculatorRequest) returns (CalculatorResponse) {
    option (google.api.http) = {
      post: "/v1/sub"
      body: "*"
    };
  };
}